<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rlMain"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgTop"
            android:layout_width="match_parent"
            android:src="@drawable/shap"
            android:layout_marginTop="@dimen/_minus30sdp"
            android:adjustViewBounds="true"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/imgTop"
            android:layout_height="match_parent">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                app:cardElevation="4dp"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="@dimen/_5sdp"
                    android:padding="@dimen/_10sdp"
                    tools:context=".ui.register.OtpVerifyFragment" >

                    <EditText
                        android:layout_width="match_parent"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        style="@style/LoginEditText"
                        android:text="INDIA (+91)"
                        android:enabled="false"
                        tools:ignore="UnusedAttribute" />
                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        style="@style/LoginEditText"
                        android:maxLength="10"
                        tools:ignore="UnusedAttribute" />
                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_name"
                        android:inputType="text"
                        style="@style/LoginEditText"
                        tools:ignore="UnusedAttribute" />
                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_email"
                        android:inputType="text"
                        style="@style/LoginEditText"
                        tools:ignore="UnusedAttribute" />
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        style="@style/LoginEditText"
                        tools:ignore="UnusedAttribute" />

                    <TextView
                        android:id="@+id/tvMsg"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:text="@string/msg_login"
                        style="@style/TextHeading"
                        android:layout_height="wrap_content" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnSubmit"
                        android:text="@string/hint_signup"
                        style="@style/LoginButton"
                        android:gravity="left|center"
                        android:paddingLeft="@dimen/_15sdp"
                        android:drawableRight="@drawable/right"
                        android:drawableTint="@color/white"
                        android:layout_width="match_parent"
                        android:textSize="@dimen/_16ssp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_25sdp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </FrameLayout>


        <ImageView
            android:layout_below="@+id/imgTop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_minus60sdp"
            android:layout_width="@dimen/_120sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/appicon"
            android:paddingBottom="@dimen/_10sdp"
            android:layout_height="@dimen/_120sdp" />
    </RelativeLayout>

</layout>
