<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:id="@+id/rlMain"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/llTop"
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:paddingTop="@dimen/_2sdp"
            android:layout_margin="@dimen/_10sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:background="@color/colorAccent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TextRegular"
                android:textAllCaps="true"
                android:text="@string/lbl_product"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TextRegular"
                android:gravity="center"
                android:text="@string/lbl_qty"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                style="@style/TextRegular"
                android:gravity="right"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:text="@string/lbl_price"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/llTop"
            android:layout_above="@+id/llBottom"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSummery"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_summery"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:id="@+id/llToperror"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_5sdp"
                android:paddingRight="@dimen/_5sdp"
                android:paddingTop="@dimen/_2sdp"
                android:layout_margin="@dimen/_10sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:background="@color/colorAccent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.3"
                    style="@style/TextRegular"
                    android:textAllCaps="true"
                    android:text="ErrorProduct"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="0.7"
                    style="@style/TextRegular"
                    android:gravity="center"
                    android:text="Status"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextRegular"
                    android:gravity="right"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:text="@string/lbl_price"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rverrorSummery"
                android:orientation="vertical"
                android:layout_width="match_parent"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_summery"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/shadow"
                android:layout_height="2dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_marginTop="@dimen/_3sdp"
                android:layout_marginBottom="@dimen/_3sdp"
                android:layout_height="wrap_content">

                <TextView
                    style="@style/TextRegularLight"
                    android:paddingLeft="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="SelectPreferTime " />
                <!--
                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:text="@string/ruppie"
                                        android:layout_below="@+id/tvItemName"
                                        style="@style/TextHeading"
                                        android:layout_height="wrap_content" />
                -->

                <Spinner
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="2019-04-30"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:paddingRight="@dimen/_10sdp"
                    android:id="@+id/spinnerslot"
                    style="@style/TextRegular"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:background="@drawable/shadow"
                android:layout_height="2dp"/>


            <RelativeLayout
                android:layout_width="@dimen/_200sdp"
                android:background="@drawable/promo_code_bg"
                android:padding="@dimen/_2sdp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/_10sdp"
                android:layout_height="@dimen/_35sdp">
                <EditText
                    android:id="@+id/etPromoCode"
                    android:layout_width="match_parent"
                    style="@style/SearchEditText"
                    android:hint="@string/hint_coupon_code"
                    android:layout_toLeftOf="@+id/btnApply"
                    android:layout_height="wrap_content" />
                <Button
                    android:id="@+id/btnApply"
                    android:layout_width="wrap_content"
                    style="@style/LoginButton"
                    android:layout_alignParentRight="true"
                    android:text="@string/lbl_apply"
                    android:background="@color/colorAccent" />
            </RelativeLayout>
            <TextView
                android:layout_width="match_parent"
                style="@style/TextHeadingLight"
                android:paddingLeft="@dimen/_10sdp"
                android:text="@string/lbl_price_details"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:background="@color/colorDivider"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextRegular"
                    android:text="@string/lbl_subtotal"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ruppie"
                    style="@style/TextHeading"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    style="@style/TextRegular"
                    android:text="0.0"
                    android:id="@+id/tv_subtotal"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextRegular"
                    android:text="@string/lbl_delivery"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ruppie"
                    style="@style/TextHeading"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="0.0"
                    style="@style/TextRegular"
                    android:id="@+id/tv_delivery"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextRegular"
                    android:text="@string/lbl_gst"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ruppie"
                    style="@style/TextHeading"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    style="@style/TextRegular"
                    android:text="0.0"
                    android:id="@+id/tv_gst"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextRegular"
                    android:text="@string/lbl_discount"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ruppie"
                    style="@style/TextHeading"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    style="@style/TextRegular"
                    android:id="@+id/tv_dicount"
                    android:text="0.0"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:background="@color/colorDivider"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_height="1dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    style="@style/TextHeadingBold"
                    android:textAllCaps="true"
                    android:text="@string/lbl_payable"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/ruppie"
                    style="@style/TextHeading"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    style="@style/TextHeadingBold"
                    android:text="0.0"
                    android:id="@+id/tv_payable"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <Button
                android:id="@+id/btnPay"
                android:visibility="visible"
                android:layout_width="match_parent"
                style="@style/LoginButton"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/lbl_pay_now"
                android:background="@color/colorAccent" />
        </LinearLayout>
    </RelativeLayout>
</layout>
