<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.cardview.widget.CardView
        android:id="@+id/imgOffer"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/_10sdp"
            android:id="@+id/llmain"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextHeading"
                        android:text="@string/lbl_order_Id"
                        android:textAllCaps="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextRegularLight"
                        android:text="1"
                        android:id="@+id/tv_orderid"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextHeading"
                        android:text="@string/lbl_order_date"
                        android:textAllCaps="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextRegularLight"
                        android:text="16-Mar-2019"
                        android:id="@+id/tv_orderdate"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextHeading"
                        android:text="@string/lbl_amount"
                        android:textAllCaps="true"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_width="wrap_content"
                        style="@style/TextRegularLight"
                        android:text="₹200"
                        android:id="@+id/tv_orderamount"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</layout>
